[package]
name = "token_analyser"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
hyper = "1.6.0"
postgres = "0.19.10"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"]}
serde_json = "1.0.140"
tokio = { version = "1.46.1", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors"]}

[[bin]]
name = "server"
path = "src/server.rs"
